--- a/testing.html
+++ b/testing.html
@@ -1,190 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Transactions Dashboard</title>
+  <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Verification Failure Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes float {0%,100%{transform:translateY(0) rotate(0);}50%{transform:translateY(-20px) rotate(180deg);}}
+    @keyframes pulse {0%,100%{opacity:1;transform:scale(1);}50%{opacity:0.7;transform:scale(1.1);}}
+    @keyframes gridMove {0%{transform:translate(0,0);}100%{transform:translate(40px,40px);}}
+    @keyframes fadeIn {0%{opacity:0; transform:translateY(10px);}100%{opacity:1;transform:translateY(0);}}
+  </style>
 </head>
-
-<body class="p-8 font-sans text-gray-800 bg-gray-50">
-  <div class="mx-auto max-w-7xl">
-    <div class="flex flex-col items-start justify-between mb-6 md:flex-row md:items-center">
-      <div>
-        <h1 class="text-2xl font-bold text-gray-800">Transactions</h1>
-        <p class="text-gray-500">Monitoring and analysis of transactions</p>
-      </div>
-      <div class="flex items-center space-x-2">
-        <span class="text-sm text-gray-600">Define Time Period:</span>
-        <input type="date" class="px-2 py-1 text-sm border rounded" />
-        <input type="date" class="px-2 py-1 text-sm border rounded" />
-      </div>
+<body class="font-sans antialiased text-gray-800 bg-gray-100">
+  <div class="p-6 mx-auto space-y-6 max-w-7xl">
+    <!-- Page Header -->
+    <div>
+      <h1 class="text-3xl font-bold">Verification Failure</h1>
+      <p class="text-gray-500">Analysis of verification failure reasons</p>
     </div>
 
     <!-- Tabs -->
-    <div class="flex mb-6 space-x-4 border-b border-gray-200">
-      <button id="tab-success"
-        class="px-4 py-2 text-sm font-medium text-blue-600 border-b-2 border-blue-600 tab-btn">Success Rate</button>
-      <button id="tab-monitoring"
-        class="px-4 py-2 text-sm font-medium text-gray-500 tab-btn hover:text-blue-600">Transactions Monitoring</button>
+    <div class="flex gap-2 mb-6">
+      <button class="px-6 py-2 font-semibold text-blue-600 bg-white border-b-2 border-blue-600 rounded-t-lg shadow">
+        Success Rate
+      </button>
+      <a href="#" class="px-6 py-2 text-gray-500 bg-gray-100 border-b-2 border-transparent rounded-t-lg hover:text-blue-600">
+        Transactions Monitoring
+      </a>
     </div>
 
-    <!-- Stats -->
-    <div class="grid grid-cols-1 gap-6 mb-6 md:grid-cols-2">
-      <div class="p-5 bg-white rounded shadow">
-        <h3 class="mb-1 text-sm font-semibold" id="stat-title-1">Average Response Time per Transaction</h3>
-        <div class="text-xl font-bold" id="stat-value-1">186 sec</div>
-        <div class="text-sm text-gray-500" id="stat-target-1">vs 360 sec</div>
-        <div class="flex justify-between mt-4 text-xs text-gray-500">
-          <span>Current</span><span>Target</span>
-        </div>
-        <div class="h-2 overflow-hidden bg-blue-100 rounded">
-          <div id="progress-1" class="h-full bg-blue-500" style="width: 52%;"></div>
-        </div>
+    <!-- Main Content -->
+    <div class="flex flex-col items-center gap-6 md:flex-row">
+      <!-- Bar Chart Card -->
+      <div class="bg-white rounded-xl p-4 md:p-8 shadow hover:shadow-lg hover:scale-[1.02] transition transform flex justify-center w-full md:w-2/5 min-h-[550px] items-center">
+        <div id="bard-chart" class="w-full "></div>
       </div>
-      <div class="p-5 bg-white rounded shadow">
-        <h3 class="mb-1 text-sm font-semibold" id="stat-title-2">% Response Time vs SLA</h3>
-        <div class="text-xl font-bold" id="stat-value-2">55%</div>
-        <div class="text-sm text-gray-500" id="stat-target-2">vs 85%</div>
-        <div class="flex justify-between mt-4 text-xs text-gray-500">
-          <span>Current</span><span>Target</span>
-        </div>
-        <div class="h-2 overflow-hidden bg-orange-100 rounded">
-          <div id="progress-2" class="h-full bg-orange-500" style="width: 55%;"></div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Charts -->
-    <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
-      <div class="bg-white p-6 rounded-xl shadow min-h-[350px]">
-        <div id="chart1"></div>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow min-h-[350px]">
-        <div id="chart2"></div>
+      <!-- Pie Chart Card -->
+      <div class="relative bg-white rounded-[40px] p-6 flex-1 min-h-[550px] justify-normal items-center overflow-hidden border border-transparent transition transform">
+        <!-- Animated grid background -->
+        <div class="absolute inset-0 bg-[length:40px_40px] bg-[linear-gradient(rgba(0,212,255,0.03)_1px,transparent_1px),linear-gradient(90deg,rgba(0,212,255,0.03)_1px,transparent_1px)] rounded-[40px] animate-[gridMove_20s_linear_infinite]"></div>
+        <!-- Orbs -->
+        <div class="absolute top-[15%] right-[10%] w-20 h-20 bg-[radial-gradient(circle,rgba(0,212,255,0.2),rgba(0,106,255,0.1))] rounded-full blur-[20px] animate-[float_6s_ease-in-out_infinite]"></div>
+        <div class="absolute bottom-[20%] left-[15%] w-15 h-15 bg-[radial-gradient(circle,rgba(255,0,110,0.2),rgba(131,56,236,0.1))] rounded-full blur-[15px] animate-[float_8s_ease-in-out_infinite_reverse]"></div>
+        <!-- Glass overlay -->
+        <div class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded-[40px] border border-white/5"></div>
+        <!-- Pie Chart Container -->
+        <div id="pies-chart" class="relative z-10 w-full rounded-[30px] bg-white/5 border border-white/5"></div>
+        <!-- Legend -->
+        <div class="absolute z-20 grid grid-cols-2 gap-4 transform -translate-x-1/2 bottom-6 left-1/2"></div>
       </div>
     </div>
   </div>
 
   <script>
-    const chartData = {
-      "success": {
-        stat1: { title: "Average Response Time per Transaction", value: "186 sec", target: "vs 360 sec", progress: 52 },
-        stat2: { title: "% Response Time vs SLA", value: "55%", target: "vs 85%", progress: 55 },
-        chart1: {
-          title: "Response Time Distribution",
-          categories: ["Between 0 And 5 Minutes", "Between 5 And 6 Minutes", "Between 6 And 7 Minutes", "Between 7 And 10 Minutes", "More than 10 Minutes"],
-          data: [84.47, 7.23, 3.25, 3.55, 1.5],
-          colors: ["#2196F3", "#4CAF50", "#FF9800", "#FF9800", "#F44336"]
-        },
-        chart2: {
-          title: "Document Types",
-          categories: ["Tax Document", "Passport", "Police ID", "Student ID", "Military ID"],
-          data: [3134, 3434, 23946, 39, 243],
-          colors: ["#2196F3", "#4CAF50", "#FF9800", "#9E9E9E", "#F44336"]
+    // Gradient stops used by FutureGradients
+    const FG = [
+      ['#00d4ff','#006eff','#0047ff'],
+      ['#ff006e','#8338ec','#3a86ff'],
+      ['#06ffa5','#00d4aa','#0056b3'],
+      ['#ffbe0b','#fb8500','#ff006e']
+    ];
+    // Data
+    const barData = [
+      { reason: 'Unclassified', percentage: 31.09, count: 9665 },
+      { reason: 'User is under 21 years old', percentage: 1.25, count: 389 },
+      { reason: 'Document date is older than XXX', percentage: 11.29, count: 3510 },
+      { reason: 'Expired Document', percentage: 8.20, count: 2552 },
+      { reason: 'Missing mandatory document files', percentage: 0.05, count: 16 },
+      { reason: 'Possible fraud', percentage: 6.08, count: 1891 },
+      { reason: 'The document is not in complete view', percentage: 11.59, count: 3602 },
+      { reason: 'All necessary data are not visible', percentage: 2.66, count: 828 },
+    ];
+    const pieData = [
+      { name: 'Verification Success', value: 72, colors: FG[0] },
+      { name: 'Abandoned by Customer', value: 16, colors: FG[1] },
+      { name: 'Verification Failure', value: 11, colors: FG[2] },
+      { name: 'Not Started', value: 1, colors: FG[3] },
+    ];
+
+    function thousand(x) { return x.toLocaleString(); }
+
+    // Configure Bar Chart
+    Highcharts.chart('bard-chart', {
+      chart: { type: 'bar', options3d: { enabled: true, alpha: 10, beta: 15, depth: 50 }, backgroundColor: 'transparent', height: 420 },
+      xAxis: {
+        categories: barData.map(d => d.reason.length>28 ? d.reason.slice(0,28)+'...' : d.reason),
+        labels: { style: { fontSize: '14px', fontWeight: '500' } }
+      },
+      yAxis: {
+        min:0, max:35, labels:{ formatter(){return this.value+'%'; }},
+        gridLineDashStyle:'Dash'
+      },
+      plotOptions: {
+        series: {
+          depth: 40,
+          dataLabels: { enabled:true, inside:true, style:{ fontSize:'13px', fontWeight:'bold' }, formatter(){ return this.series.name==='percentage'? this.y+'%': thousand(this.y); } }
         }
       },
-      "monitoring": {
-        stat1: { title: "Avg Txn Time", value: "152 sec", target: "vs 320 sec", progress: 65 },
-        stat2: { title: "% SLA Hit", value: "63%", target: "vs 90%", progress: 63 },
-        chart1: {
-          title: "Updated Time Distribution",
-          categories: ["< 5min", "5-10min", "10-15min", "15-20min", "> 20min"],
-          data: [72, 18, 5, 3, 2],
-          colors: ["#0284C7", "#10B981", "#F59E0B", "#F59E0B", "#EF4444"]
-        },
-        chart2: {
-          title: "Updated Document Stats",
-          categories: ["License", "Utility Bill", "Driving ID", "NADRA Card", "School ID"],
-          data: [2534, 4134, 17450, 139, 543],
-          colors: ["#0284C7", "#10B981", "#F59E0B", "#9CA3AF", "#EF4444"]
-        }
+      series: [
+        { name:'percentage', data: barData.map(d=>d.percentage), color:'#FACC15', borderRadius:5 },
+        { name:'count', data: barData.map(d=>d.count), color:'#A3A3A3', borderRadius:5 }
+      ],
+      legend: {
+        align:'center', verticalAlign:'bottom', layout:'horizontal',
+        labelFormatter(){ if(this.name==='percentage') return 'Failure Rate %'; if(this.name==='count') return 'Count'; return this.name; }
       }
-    };
-
-    let chart1, chart2;
-
-    function renderCharts(tabKey) {
-      const d = chartData[tabKey];
-
-      // Update stats
-      document.getElementById("stat-title-1").textContent = d.stat1.title;
-      document.getElementById("stat-value-1").textContent = d.stat1.value;
-      document.getElementById("stat-target-1").textContent = d.stat1.target;
-      document.getElementById("progress-1").style.width = d.stat1.progress + "%";
-
-      document.getElementById("stat-title-2").textContent = d.stat2.title;
-      document.getElementById("stat-value-2").textContent = d.stat2.value;
-      document.getElementById("stat-target-2").textContent = d.stat2.target;
-      document.getElementById("progress-2").style.width = d.stat2.progress + "%";
-
-      chart1.update({
-        title: { text: d.chart1.title },
-        xAxis: { categories: d.chart1.categories },
-        series: [{ data: d.chart1.data.map((y, i) => ({ y, color: d.chart1.colors[i] })) }]
-      });
-
-      chart2.update({
-        title: { text: d.chart2.title },
-        xAxis: { categories: d.chart2.categories },
-        series: [{ data: d.chart2.data.map((y, i) => ({ y, color: d.chart2.colors[i] })) }]
-      });
-    }
-
-    document.getElementById("tab-success").addEventListener("click", () => {
-      renderCharts("success");
-      document.getElementById("tab-success").classList.add("text-blue-600", "border-b-2", "border-blue-600");
-      document.getElementById("tab-monitoring").classList.remove("text-blue-600", "border-b-2", "border-blue-600");
     });
 
-    document.getElementById("tab-monitoring").addEventListener("click", () => {
-      renderCharts("monitoring");
-      document.getElementById("tab-monitoring").classList.add("text-blue-600", "border-b-2", "border-blue-600");
-      document.getElementById("tab-success").classList.remove("text-blue-600", "border-b-2", "border-blue-600");
+    // Configure Pie Chart
+    Highcharts.chart('pies-chart', {
+      chart: { type:'pie', options3d:{enabled:true,alpha:35,beta:0,depth:45}, backgroundColor:'transparent', height:380, animation:{ duration:2500, easing:'easeOutElastic' } },
+      title: {
+        useHTML:true, floating:true, align:'center', verticalAlign:'middle', y:0,
+        text:`<div style="text-align:center;padding:25px;">
+                <div style="font-size:48px;font-weight:900;color:#111;animation:pulse 2s infinite;">${pieData.reduce((s,d)=>s+d.value,0)}</div>
+                <div style="font-size:11px;color:#222;font-weight:700;text-transform:uppercase;letter-spacing:4px;animation:fadeIn 3s ease-in;">TOTAL TRANSACTIONS</div>
+              </div>`
+      },
+      plotOptions: {
+        pie: {
+          innerSize:'55%', depth:45, borderRadius:25, slicedOffset:12, allowPointSelect:true,
+          dataLabels:{ enabled:true, format:'{point.percentage:.0f}%', style:{ fontSize:'12px', fontWeight:'900', color:'#111' }, distance:-22 }
+        }
+      },
+      tooltip: {
+        backgroundColor:'white', borderRadius:20, shadow:{ color:'rgba(0,212,255,0.3)', offsetY:10, opacity:0.3, width:25 },
+        formatter(){ return `<div style="padding:20px;text-align:center;"><div style="font-weight:900;color:#111;font-size:15px;text-transform:uppercase;letter-spacing:1px;">${this.point.name}</div><div style="color:#222;margin-bottom:6px;">Value: <span style="font-weight:800;color:#111;">${this.y.toLocaleString()}</span></div><div style="color:#222;">Share: <span style="font-weight:800;color:#111;">${this.percentage.toFixed(1)}%</span></div></div>` }
+      },
+      series:[{
+        name:'Data', data: pieData.map(d=>({name:d.name,y:d.value,color:{linearGradient:{x1:0,y1:0,x2:1,y2:1},stops:d.colors.map((c,i)=>[i/(d.colors.length-1),c])}, sliced:true }))
+      }],
+      credits:{enabled:false}
     });
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const chartOptions = (title, categories, data, colors) => ({
-        chart: { type: 'bar', options3d: { enabled: true, alpha: 15, beta: 15, depth: 50 }, backgroundColor: 'transparent' },
-        title: { text: title, align: 'left', style: { fontSize: '18px', fontWeight: 'bold' } },
-        xAxis: { categories, labels: { style: { fontSize: '15px', color: '#64748b' } }, gridLineWidth: 1, gridLineColor: '#e5e7eb' },
-        yAxis: { min: 0, title: { text: null }, labels: { style: { fontSize: '14px', color: '#64748b' } }, gridLineWidth: 1, gridLineColor: '#e5e7eb' },
-        legend: { enabled: false },
-        plotOptions: {
-          bar: {
-            depth: 40,
-            groupZPadding: 10,
-            grouping: false,
-            dataLabels: {
-              enabled: true,
-              format: '{point.y}',
-              style: { color: '#222', fontWeight: 'bold', fontSize: '15px' },
-              align: 'right',
-              inside: false
-            }
-          }
-        },
-        tooltip: { pointFormat: '<b>{point.y}</b>' },
-        series: [{ data: data.map((y, i) => ({ y, color: colors[i] })) }]
-      });
-
-      chart1 = Highcharts.chart("chart1", chartOptions(
-        chartData.success.chart1.title,
-        chartData.success.chart1.categories,
-        chartData.success.chart1.data,
-        chartData.success.chart1.colors
-      ));
-
-      chart2 = Highcharts.chart("chart2", chartOptions(
-        chartData.success.chart2.title,
-        chartData.success.chart2.categories,
-        chartData.success.chart2.data,
-        chartData.success.chart2.colors
-      ));
+    // Render custom legend boxes
+    const legendRoot = document.querySelector('.relative > div:last-child');
+    pieData.forEach((d,colIndex) => {
+      const leg = document.createElement('div');
+      leg.className = 'bg-white/95 backdrop-blur-lg rounded-lg px-4 py-3 flex items-center gap-2 cursor-pointer transition transform';
+      leg.onmouseenter = ()=>leg.classList.add('scale-105'), leg.onmouseleave = ()=>leg.classList.remove('scale-105');
+      const dot = document.createElement('div');
+      dot.className = 'w-3 h-3 rounded-full animate-pulse';
+      dot.style.background = d.colors[2];
+      const label = document.createElement('span');
+      label.className = 'text-xs font-semibold text-gray-800 uppercase';
+      label.textContent = d.name;
+      leg.append(dot, label);
+      legendRoot.append(leg);
     });
   </script>
 </body>
-
 </html>
