--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <nav class="flex-1 px-3 py-4 overflow-y-auto">
           <a
-            href="#"
+            href="/index.html"
             title="Dashboard"
             class="flex items-center gap-2 px-3 py-2 font-semibold transition bg-gray-200 rounded hover:bg-gray-100 sidebar-item active"
           >
@@ -110,69 +110,69 @@
                 <span> Overall Success </span>
               </a>
               <a
-                href="#"
+                href="/abandoned-by-customer.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
                 ><i class="fa-regular fa-user"></i>
                 <span> Abandoned by Customer </span>
               </a>
               <a
-                href="#"
+                href="/verification-failure.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-circle-xmark"></i>
                 <span> Verification Failure</span>
               </a>
               <a
-                href="#"
+                href="/id-breakdown.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-database"></i>
                 <span> ID Breakdown </span>
               </a>
               <a
-                href="#"
+                href="/document-breakdown.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-regular fa-file"></i>
                 <span> Document Breakdown </span></a
               >
               <a
-                href="#"
+                href="/video-call-waiting.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-regular fa-clock"></i>
                 <span> Video Call Waiting </span>
               </a>
               <a
-                href="#"
+                href="/verification-time.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-regular fa-clock"></i>
                 <span> Verification Time </span></a
               >
               <a
-                href="#"
+                href="/average-response-time.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-chart-line"></i>
                 <span> Average Response </span>
               </a>
               <a
-                href="#"
+                href="/country-distribution.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-globe"></i>
                 <span> Country Distribution </span></a
               >
               <a
-                href="#"
+                href="/mobile-devices.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-mobile-screen"></i>
                 <span> Mobile Devices </span>
               </a>
               <a
-                href="#"
+                href="/detailed-transactions.html"
                 class="flex items-center gap-2 px-3 py-1 text-sm text-gray-600 rounded hover:bg-gray-100"
               >
                 <i class="fa-solid fa-chart-line"></i>
@@ -181,7 +181,7 @@
             </div>
           </div>
           <a
-            href="#"
+            href="/success-rate.html"
             title="Success Rate"
             class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100"
           >
@@ -189,7 +189,7 @@
             <span class="sidebar-label">Success Rate</span>
           </a>
           <a
-            href="#"
+            href="/transactions.html"
             title="Transactions"
             class="flex items-center gap-2 px-3 py-2 text-gray-700 transition rounded sidebar-item hover:bg-gray-100"
           >
