--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <span class="sidebar-label">Settings</span>
           </a>
           <a
-            href="#"
+            href="/logout.html"
             title="Logout"
             class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-gray-100"
           >
