--- a/overall-success.html
+++ b/overall-success.html
@@ -127,7 +127,7 @@
                     <i class="fa-solid fa-gear"></i>
                     <span class="sidebar-label">Settings</span>
                 </a>
-                <a href="#" title="Logout"
+                <a href="/logout.html" title="Logout"
                     class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-gray-100">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="sidebar-label">Logout</span>
