--- a/settings.html
+++ b/settings.html
@@ -125,7 +125,7 @@
                     <i class="fa-solid fa-gear text-[#2563EB]"></i>
                     <span class="sidebar-label text-[#2563EB]">Settings</span>
                 </a>
-                <a href="#" title="Logout"
+                <a href="/logout.html" title="Logout"
                     class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-gray-100">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="sidebar-label">Logout</span>
