--- a/success-rate.html
+++ b/success-rate.html
@@ -151,7 +151,7 @@
                     <i class="fa-solid fa-gear"></i>
                     <span class="sidebar-label">Settings</span>
                 </a>
-                <a href="#" title="Logout"
+                <a href="/logout.html" title="Logout"
                     class="flex items-center gap-2 px-3 py-2 mt-4 text-red-500 transition rounded sidebar-item hover:bg-gray-100">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     <span class="sidebar-label">Logout</span>
@@ -177,8 +177,8 @@
             </header>
 
             <main class="flex-1 p-6 overflow-y-auto font-sans bg-gray-50">
-
-                <div class="">
+                <div>
+                    <!-- Header & Date Inputs -->
                     <div class="flex flex-col items-start justify-between gap-4 mb-6 md:flex-row md:items-center">
                         <div>
                             <h1 class="text-2xl font-bold text-gray-800">Success Rate</h1>
@@ -192,6 +192,7 @@
                         </div>
                     </div>
 
+                    <!-- Tabs -->
                     <div class="flex gap-2">
                         <button data-view="view-success"
                             class="px-4 py-2 -mb-px font-medium border-b-2 border-blue-500 tab-btn active">Success
@@ -202,18 +203,13 @@
 
                     <!-- Metric Cards -->
                     <div class="grid grid-cols-1 gap-6 mt-5 mb-6 md:grid-cols-2">
-                        <!-- Completion Rate Card -->
+                        <!-- Completion Rate -->
                         <div
                             class="border-l-4 border-l-[#4CAF50] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
                             <div class="flex-1">
-                                <h3 class="text-sm font-medium text-gray-500">
-                                    Completion Rate
-                                </h3>
+                                <h3 class="text-sm font-medium text-gray-500">Completion Rate</h3>
                                 <div class="flex items-baseline gap-2 mt-2">
-                                    <div class="text-sm text-[#020817] font-normal">
-                                        71.6%
-                                        +24%
-                                    </div>
+                                    <div class="text-sm text-[#020817] font-normal">71.6% +24%</div>
                                 </div>
                             </div>
                             <div class="pt-3 mt-3 border-t border-gray-100">
@@ -225,17 +221,14 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Onboarding Time Card -->
+
+                        <!-- Onboarding Time -->
                         <div
                             class="border-l-4 border-l-[#2196F3] p-5 flex flex-col min-h-[140px] bg-white rounded-xl shadow-sm">
                             <div class="flex-1">
-                                <h3 class="text-sm font-medium text-gray-500">
-                                    Average Onboarding Time
-                                </h3>
+                                <h3 class="text-sm font-medium text-gray-500">Average Onboarding Time</h3>
                                 <div class="flex items-baseline gap-2 mt-2">
-                                    <div class="text-sm text-[#020817] font-normal">
-                                        35 sec +8%
-                                    </div>
+                                    <div class="text-sm text-[#020817] font-normal">35 sec +8%</div>
                                 </div>
                             </div>
                             <div class="pt-3 mt-3 border-t border-gray-100">
@@ -248,11 +241,12 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- Charts -->
-                    <div class="">
+                    <div>
                         <!-- Success View -->
                         <div id="view-success" class="grid grid-cols-1 gap-6 space-y-6 view-pane lg:grid-cols-2">
-                            <!-- 3D Pie -->
+                            <!-- Pie Chart Card -->
                             <div
                                 class="relative bg-white rounded-3xl p-12 min-h-[550px] overflow-hidden border border-gray-100 transition-all">
                                 <div
@@ -267,30 +261,36 @@
                                 <div
                                     class="absolute inset-0 bg-white/5 backdrop-blur-[30px] rounded-3xl border border-white/5">
                                 </div>
-                                <div id="pie-charted"
+
+                                <!-- ✅ Updated Pie Chart Container -->
+                                <div id="successPieChartContainers"
                                     class="relative z-10 flex items-center justify-center w-full h-full border rounded-2xl bg-white/5 border-white/5">
                                 </div>
-                                <div id="pie-legendss"
+
+                                <!-- ✅ Updated Pie Legend Container -->
+                                <div id="successPieLegends"
                                     class="absolute z-20 grid grid-cols-2 gap-4 transform -translate-x-1/2 bottom-6 left-1/2">
                                 </div>
                             </div>
-                            <div id="bar-charted"
+
+                            <!-- ✅ Updated Bar Chart Container -->
+                            <div id="failureBarCharts"
                                 class="bg-white rounded-xl p-6 shadow min-h-[350px] flex items-center justify-center">
                             </div>
-                            <!-- 3D Bar -->
                         </div>
-                    </div>
 
-                    <!-- Transactions View -->
-                    <div id="view-transactions"
-                        class="view-pane hidden col-span-1 lg:col-span-2 bg-white rounded-xl p-6 flex items-center justify-center min-h-[400px]">
-                        <div class="text-center">
-                            <h3 class="mb-2 text-xl font-medium text-gray-600">Transaction monitoring data</h3>
-                            <p class="text-gray-500">Select a date range to view detailed transaction data</p>
+                        <!-- Transactions View -->
+                        <div id="view-transactions"
+                            class="view-pane hidden col-span-1 lg:col-span-2 bg-white rounded-xl p-6 flex items-center justify-center min-h-[400px]">
+                            <div class="text-center">
+                                <h3 class="mb-2 text-xl font-medium text-gray-600">Transaction monitoring data</h3>
+                                <p class="text-gray-500">Select a date range to view detailed transaction data</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </main>
+
 
             <!-- Footer -->
             <footer class="bg-white border-t border-gray-200 footer">
@@ -320,47 +320,66 @@
             });
         });
 
-        const chartPieData = [
+        const successRatePieData = [
             { name: 'Verification Success', y: 72, colors: ['#00d4ff', '#006eff', '#0047ff'] },
             { name: 'Abandoned by Customer', y: 16, colors: ['#ff006e', '#8338ec', '#3a86ff'] },
             { name: 'Verification Failure', y: 11, colors: ['#06ffa5', '#00d4aa', '#0056b3'] },
             { name: 'Not Started', y: 1, colors: ['#ffbe0b', '#fb8500', '#ff006e'] }
         ];
 
-        Highcharts.chart('pie-charted', {
-            chart: { type: 'pie', options3d: { enabled: true, alpha: 35, depth: 45 }, backgroundColor: 'transparent', height: 380 },
+        Highcharts.chart('successPieChartContainers', {
+            chart: {
+                type: 'pie',
+                options3d: { enabled: true, alpha: 35, depth: 45 },
+                backgroundColor: 'transparent',
+                height: 380
+            },
             title: {
                 useHTML: true,
                 text: `<div style="text-align:center;padding:25px;">
-                <div style="font-size:48px;font-weight:900;color:#111;animation:pulse 2s infinite;">100</div>
-                <div style="font-size:11px;color:#222;font-weight:700;text-transform:uppercase;letter-spacing:4px;animation:fadeIn 3s ease-in;">TOTAL DATA POINTS</div>
-              </div>`,
-                align: 'center', verticalAlign: 'middle', floating: true, y: 0
+              <div style="font-size:48px;font-weight:900;color:#111;animation:pulse 2s infinite;">100</div>
+              <div style="font-size:11px;color:#222;font-weight:700;text-transform:uppercase;letter-spacing:4px;animation:fadeIn 3s ease-in;">TOTAL DATA POINTS</div>
+            </div>`,
+                align: 'center',
+                verticalAlign: 'middle',
+                floating: true,
+                y: 0
             },
             credits: { enabled: false },
             plotOptions: {
                 pie: {
-                    innerSize: '55%', depth: 45, borderWidth: 1, borderRadius: 25, cursor: 'pointer',
-                    dataLabels: { enabled: true, format: '{point.percentage:.0f}%', style: { fontSize: '12px', fontWeight: '900', color: '#111' }, distance: -22 },
+                    innerSize: '55%',
+                    depth: 45,
+                    borderWidth: 1,
+                    borderRadius: 25,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: true,
+                        format: '{point.percentage:.0f}%',
+                        style: { fontSize: '12px', fontWeight: '900', color: '#111' },
+                        distance: -22
+                    },
                     animation: { duration: 2500 }
                 }
             },
             tooltip: {
-                backgroundColor: 'white', borderRadius: 20, style: { fontSize: '13px', fontWeight: '600' },
+                backgroundColor: 'white',
+                borderRadius: 20,
+                style: { fontSize: '13px', fontWeight: '600' },
                 formatter: function () {
                     return `<div style="padding:20px;text-align:center;">
-          <div style="font-weight:900;color:#111;margin-bottom:10px;font-size:15px;text-transform:uppercase;letter-spacing:1px;">
-            ${this.point.name}
-          </div>
-          <div style="color:#222;margin-bottom:6px;">Value: <span style="font-weight:800;color:#111;">${this.y}</span></div>
-          <div style="color:#222;">Share: <span style="font-weight:800;color:#111;">${this.percentage.toFixed(1)}%</span></div>
-        </div>`;
+                    <div style="font-weight:900;color:#111;margin-bottom:10px;font-size:15px;text-transform:uppercase;letter-spacing:1px;">
+                      ${this.point.name}
+                    </div>
+                    <div style="color:#222;margin-bottom:6px;">Value: <span style="font-weight:800;color:#111;">${this.y}</span></div>
+                    <div style="color:#222;">Share: <span style="font-weight:800;color:#111;">${this.percentage.toFixed(1)}%</span></div>
+                </div>`;
                 }
             },
             legend: { enabled: false },
             series: [{
                 name: 'Data',
-                data: chartPieData.map(item => ({
+                data: successRatePieData.map(item => ({
                     name: item.name,
                     y: item.y,
                     color: {
@@ -372,8 +391,8 @@
             }]
         });
 
-        const legendContainer = document.getElementById('pie-legendss');
-        chartPieData.forEach(entry => {
+        const pieLegendContainer = document.getElementById('successPieLegends');
+        successRatePieData.forEach(entry => {
             const legendBox = document.createElement('div');
             legendBox.className = 'bg-white/95 backdrop-blur-lg rounded-lg px-4 py-3 flex items-center gap-2 cursor-pointer transition transform hover:-translate-y-1 hover:scale-105';
             const dot = document.createElement('div');
@@ -384,23 +403,113 @@
             label.className = 'text-xs font-semibold text-gray-800 uppercase';
             label.textContent = entry.name;
             legendBox.append(dot, label);
-            legendContainer.append(legendBox);
+            pieLegendContainer.append(legendBox);
         });
 
         const failureReasons = ["Unclassified", "Document date is older than XXX", "The document is not in complete view", "User is under 21 years old", "Missing mandatory document fields", "Possible fraud"];
         const failurePercentages = [31, 11.3, 11.5, 1.25, 0.05, 6.08];
         const failureColors = ['#9E9E9E', '#FF9800', '#FF9800', '#F44336', '#F44336', '#F44336'];
 
-        Highcharts.chart('bar-charted', {
-            chart: { type: 'bar', options3d: { enabled: true, alpha: 15, beta: 15, depth: 50 }, backgroundColor: 'transparent', height: 320 },
-            title: { text: 'Failure Reasons', align: 'left', style: { fontSize: '18px', fontWeight: 'bold' } },
-            xAxis: { categories: failureReasons, labels: { style: { fontSize: '15px', color: '#64748b' } }, gridLineWidth: 1, gridLineColor: '#e5e7eb' },
-            yAxis: { min: 0, max: 35, title: { text: null }, labels: { style: { fontSize: '14px', color: '#64748b' } }, gridLineWidth: 1, gridLineColor: '#e5e7eb' },
-            plotOptions: { bar: { depth: 40, grouping: false, dataLabels: { enabled: true, format: '{point.y:.2f}', style: { color: '#222', fontWeight: 'bold', fontSize: '15px' }, align: 'right', inside: false } } },
+        Highcharts.chart('failureBarCharts', {
+            chart: {
+                type: 'bar',
+                options3d: { enabled: true, alpha: 15, beta: 15, depth: 50 },
+                backgroundColor: 'transparent',
+                height: 320
+            },
+            title: {
+                text: 'Failure Reasons',
+                align: 'left',
+                style: { fontSize: '18px', fontWeight: 'bold' }
+            },
+            xAxis: {
+                categories: failureReasons,
+                labels: { style: { fontSize: '15px', color: '#64748b' } },
+                gridLineWidth: 1,
+                gridLineColor: '#e5e7eb'
+            },
+            yAxis: {
+                min: 0,
+                max: 35,
+                title: { text: null },
+                labels: { style: { fontSize: '14px', color: '#64748b' } },
+                gridLineWidth: 1,
+                gridLineColor: '#e5e7eb'
+            },
+            plotOptions: {
+                bar: {
+                    depth: 40,
+                    grouping: false,
+                    dataLabels: {
+                        enabled: true,
+                        format: '{point.y:.2f}',
+                        style: { color: '#222', fontWeight: 'bold', fontSize: '15px' },
+                        align: 'right',
+                        inside: false
+                    }
+                }
+            },
             tooltip: { pointFormat: '<b>{point.y:.2f}%</b>' },
-            series: [{ name: 'value', data: failurePercentages.map((v, i) => ({ y: v, color: failureColors[i] })) }],
+            series: [{
+                name: 'value',
+                data: failurePercentages.map((v, i) => ({ y: v, color: failureColors[i] }))
+            }],
             credits: { enabled: false }
         });
+    </script>
+
+    <script>
+        function openMobileMenu() {
+            document.getElementById("sidebar").classList.add("fixed", "left-0", "top-0");
+            document.getElementById("overlay").classList.remove("hidden");
+        }
+
+        function closeMobileMenu() {
+            document.getElementById("sidebar").classList.remove("fixed");
+            document.getElementById("overlay").classList.add("hidden");
+        }
+
+        document.getElementById("year").textContent = new Date().getFullYear();
+
+        let collapsed = false;
+        let dropdownOpen = {};
+
+        function toggleCollapse() {
+            const sidebar = document.getElementById("sidebar");
+            const icon = document.getElementById("collapseIcon");
+            const labels = document.querySelectorAll(".sidebar-label");
+
+            collapsed = !collapsed;
+
+            // toggle width
+            sidebar.classList.toggle("w-[250px]");
+            sidebar.classList.toggle("w-[70px]");
+
+            // toggle text label visibility
+            labels.forEach((label) => {
+                if (collapsed) {
+                    label.classList.add("hidden");
+                } else {
+                    label.classList.remove("hidden");
+                }
+            });
+
+            // rotate icon
+            if (icon) icon.classList.toggle("rotate-180");
+        }
+
+        function toggleDropdown(name) {
+            const dropdown = document.getElementById("dropdown-" + name);
+            const icon = document.getElementById("dropdownIcon-" + name);
+            if (dropdown.classList.contains("hidden")) {
+                dropdown.classList.remove("hidden");
+                icon.classList.add("rotate-180");
+            } else {
+                dropdown.classList.add("hidden");
+                icon.classList.remove("rotate-180");
+            }
+        }
+
     </script>
 
     <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
